--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
         <ul>
           <li>
             <a
-              href="https://validator.w3.org/check?uri=https://samuel-welday.github.io/pie/pie.html"
+              href="https://validator.w3.org/check?uri=https://samuel-welday.github.io/W1D2-Pie/"
               ><img src="./image/w3c-html.png" alt="HTML Validator"
             /></a>
             <a
-              href="http://jigsaw.w3.org/css-validator/validator?uri=https://samuel-welday.github.io/pie/recipe.css"
+              href="http://jigsaw.w3.org/css-validator/validator?uri=https://samuel-welday.github.io/W1D2-Pie/recipe.css"
               ><img src="./image/w3c-css.png" alt="CSS Validator"
             /></a>
           </li>
